--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
+    "@contentful/rich-text-types": "^13.1.0",
     "gatsby": "^2.1.29",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-manifest": "^2.0.22",
@@ -15,7 +17,9 @@
     "gatsby-source-contentful": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-sharp": "^2.1.15",
+    "i": "^0.3.6",
     "node-sass": "^4.11.0",
+    "npm": "^6.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
