--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.8.6",
     "prettier": "^1.16.4"
   },
   "keywords": [
